<resources>
    <string name="app_name">MusicIn</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Create</string>
    <string name="error_message_role">Choose Role</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_phone">Enter Valid Phone Number</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful!</string>
    <string name="text_not_member">No account yet? Create one!</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>

    <string name="post">Post</string>
    <string name="error_message_address">Enter Address</string>
    <string name="error_message_time">Enter Time</string>
    <string name="error_message_paying_range">Enter Paying Range</string>
    <string name="error_message_date">Enter Date</string>
    <string name="error_message_genre">Enter Genre</string>
    <string name="hint_address">Input Address</string>
    <string name="hint_time">Input Time</string>
    <string name="hint_paying_range">Input Paying Range</string>
    <string name="hint_date">Input Date</string>
    <string name="hint_genre">Input Genre of Music</string>
    <string name="success_message_add">Job Successfully Added!</string>
    <string name="error_message_businessName">Enter Business Name</string>
    <string name="hint_businessName">Input Business Name</string>
    <string name="appeal">Appeal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
