<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context="com.example.aldrian.musicin2firebase.musician.MusicianFindJobDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="96dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:src="@drawable/business_name_icon"/>
                <TextView
                    android:id="@+id/tv_job_businessName"
                    android:layout_marginLeft="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_businessName"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:src="@drawable/time_date_icon"/>
                <TextView
                    android:id="@+id/tv_job_time"
                    android:layout_marginLeft="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_time"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:src="@drawable/calendar_icon"/>
                <TextView
                    android:id="@+id/tv_job_date"
                    android:layout_marginLeft="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_date"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:src="@drawable/salary_icon"/>
                <TextView
                    android:id="@+id/tv_job_paying_range"
                    android:layout_marginLeft="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_paying_range"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:src="@drawable/genre_icon"/>
                <TextView
                    android:id="@+id/tv_job_genre"
                    android:layout_marginLeft="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_genre"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:src="@drawable/location"/>
                <TextView
                    android:id="@+id/tv_job_address"
                    android:layout_marginLeft="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/hint_address"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btn_appeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appeal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"/>



    </LinearLayout>

</ScrollView>

