<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context="com.example.aldrian.musicin2firebase.fragments.OwnerPostJobFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="10"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6.5dp"
                android:src="@drawable/business_name_icon" />
            <EditText
                android:layout_marginLeft="16dp"
                android:id="@+id/et_businessName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_businessName"
                android:inputType="textShortMessage"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="10"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6.5dp"
                android:src="@drawable/time_date_icon" />
            <EditText
                android:layout_marginLeft="16dp"
                android:id="@+id/et_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_time"
                android:inputType="datetime"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="10"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6.5dp"
                android:src="@drawable/calendar_icon"/>
            <EditText
                android:layout_marginLeft="16dp"
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_date"
                android:inputType="textShortMessage"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="10">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6.5dp"
                android:src="@drawable/salary_icon" />
            <EditText
                android:layout_marginLeft="16dp"
                android:id="@+id/et_paying_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_paying_range"
                android:inputType="textShortMessage"
                android:textColorHint="@color/white"
                android:textColor="@color/white" />
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="10">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6.5dp"
                android:src="@drawable/genre_icon" />
            <EditText
                android:layout_marginLeft="16dp"
                android:id="@+id/et_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_genre"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="textShortMessage"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="10"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6.5dp"
                android:src="@drawable/location"/>
            <EditText
                android:layout_marginLeft="16dp"
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="textShortMessage"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

</LinearLayout>
</ScrollView>

