<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_loginpage"

    tools:context="com.example.aldrian.musicin2firebase.users.LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#40000000">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="24dp">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="10">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="6.5dp"
                    android:src="@drawable/ic_person_outline_white_24dp" />
                <EditText
                    android:layout_marginLeft="16dp"
                    android:id="@+id/textInputEditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textShortMessage"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:maxLines="1"/>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="10">
                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="6.5dp"
                    android:src="@drawable/ic_lock_outline_white_24dp" />
                <EditText
                    android:layout_marginLeft="16dp"
                    android:id="@+id/textInputEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:maxLines="1"/>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"/>
        </LinearLayout>

        <Button
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:textColor="@color/dark_blue"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="40dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_not_member"
            android:textSize="16dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"/>
    </android.support.v7.widget.LinearLayoutCompat>

</LinearLayout>
