<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_create_acc_portrait"
    tools:context="com.example.aldrian.musicin2firebase.users.RegisterActivity">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create an account"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Who are you?"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="5">
                <ImageView
                    android:id="@+id/role_musician"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:src="@drawable/btn_musician"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Musician"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="17sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="5">
                <ImageView
                    android:id="@+id/role_owner"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:src="@drawable/btn_owner"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Shop owner"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="17sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="10">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="6.5dp"
                    android:src="@drawable/ic_person_outline_white_24dp" />
                <EditText
                    android:layout_marginLeft="16dp"
                    android:textSize="17sp"
                    android:id="@+id/textInputEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:inputType="textShortMessage"
                    android:maxLines="1"/>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="10">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="6.5dp"
                    android:src="@drawable/ic_mail_outline_white_48dp" />
                <EditText
                    android:layout_marginLeft="16dp"
                    android:textSize="17sp"
                    android:id="@+id/textInputEditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:inputType="textShortMessage"
                    android:maxLines="1" />
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="10">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="6.5dp"
                    android:src="@drawable/ic_phone_white_24dp"/>
                <EditText
                    android:layout_marginLeft="16dp"
                    android:textSize="17sp"
                    android:id="@+id/textInputEditTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:inputType="number"
                    android:maxLength="15"
                    android:maxLines="1"/>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="10">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="6.5dp"
                    android:src="@drawable/ic_lock_outline_white_24dp" />
                <EditText
                    android:layout_marginLeft="16dp"
                    android:textSize="17sp"
                    android:id="@+id/textInputEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:maxLines="1"/>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>

        <Button
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/text_register"
            android:textColor="@color/dark_blue"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewLoginLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Already a member? Login"
            android:textSize="16dp"
            android:textColor="@color/pastel_white"/>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
